--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -3,6 +3,9 @@ AllCops:
     - "vendor/**/*"
     - "db/schema.rb"
   UseCache: false
+# We use multi line { for semantic usage meaning to return a value
+Style/BlockDelimiters:
+  Enabled: false
 Style/CollectionMethods:
   Description: Preferred collection methods.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#map-find-select-reduce-size
