--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.2
-script: bundle exec rake rspec
+script: bundle exec rake spec
 gemfile:
   - gemfiles/rails3.gemfile
   - gemfiles/rails4.gemfile
