--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: ruby
 rvm:
-  - 2.2
+  - 2.2.2
+  - 2.3.0
 script: bundle exec rake spec
 gemfile:
   - gemfiles/rails3.gemfile
   - gemfiles/rails4.gemfile
+  - gemfiles/rails5.gemfile
 notifications:
   email:
     - support@travellink.com.au
