--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ rvm:
   - 2.6
 matrix:
   fast_finish: true
+  exclude:
+    - rvm: 2.4
+      gemfile: gemfiles/rails6.gemfile
+
+before_install:
+  - gem install bundler
 script: bundle exec rake spec
 gemfile:
   - gemfiles/rails5.gemfile
