--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,11 @@
+AllCops:
+  TargetRubyVersion: 2.6
+
 Metrics/LineLength:
-  Max: 80
+  Max: 120
 
 Style/Documentation:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
-  Enabled: false # Using Ruby 2.4 doesn't need it
+  Enabled: true
