--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,28 @@
 AllCops:
   TargetRubyVersion: 2.6
+  Exclude:
+    - lib/timely/temporal_patterns/*.rb
 
 Metrics/LineLength:
-  Max: 120
+  Max: 200
 
 Style/Documentation:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: true
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
