--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -7,6 +7,9 @@ jobs:
       matrix:
         gemfile: [rails60, rails61, rails70]
         ruby: ["2.6", "2.7", "3.0"]
+        exlclude:
+          - ruby: 2.6
+            gemfile: rails70
     runs-on: ubuntu-latest
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
