--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,10 +6,8 @@ jobs:
       fail-fast: false
       matrix:
         gemfile: [rails60, rails61, rails70]
-        ruby: ["2.6", "2.7", "3.0"]
-        exlclude:
-          - ruby: 2.6
-            gemfile: rails70
+        ruby: ["2.7", "3.0", "3.1.0-preview1"]
+
     runs-on: ubuntu-latest
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
